--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
-/*D:\Users\steli\Desktop\Transportadoras\transporte-moz\tsconfig.json*/
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -15,11 +18,15 @@
     "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
-      { "name": "next" }
+      {
+        "name": "next"
+      }
     ],
-    "baseUrl": "src",               // <--- ESSENCIAL
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]                 // Agora "@/components/AuthGuard" vai funcionar
+      "@/*": [
+        "./src/*"
+      ]
     }
   },
   "include": [
@@ -27,8 +34,10 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts",
-    "**/*.mts"
+    "**/*.mts",
+    ".next/dev/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
